# chained-iterable

./: .bumpversion.cfg  .flake8  .pre-commit-config.yaml  LICENSE  README.md  azure-pipelines.yml  pyproject.toml  pyproject.toml2  pytest.ini  requirements.txt
.github/workflows/: ci.yml
chained_iterable/: __init__.py  chained_iterable.py  utilities.py
functional_itertools/: __init__.py  errors.py  functional_itertools.py  utilities.py
tests/: test_chained_iterable.py  test_functional_itertools.py  test_utilities.py
