[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "functional_itertools"
author = "Bao Wei"
author-email = "baowei.ur521@gmail.com"
home-page = "https://github.com/baowei521/functional-itertools"
classifiers = ["License :: OSI Approved :: MIT License"]
