[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 80

[tool.flit.metadata]
module = "functional_itertools"
author = "Bao Wei"
author-email = "baowei.ur521@gmail.com"
home-page = "https://github.com/baowei521/functional-itertools"
requires = ["more-itertools >= 8.2"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.6"
keywords = "functional itertools"
license = "MIT"

[tool.flit.metadata.requires-extra]
test = ["hypothesis", "pytest", "pytest-cov", "pytest-randomly", "pytest-xdist"]
dev = ["bump2version", "pre-commit"]
