[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 80

[tool.flit.metadata]
module = "chained_iterable"
author = "Bao Wei"
author-email = "baowei.ur521@gmail.com"
home-page = "https://github.com/baowei521/chained-iterable"
requires = ["more-itertools >= 8.2"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.6"
keywords = "iterables itertools functional"
license = "MIT"

[tool.flit.metadata.requires-extra]
test = [
    "hypothesis >= 5.5",
    "pytest >= 5.3",
    "pytest-cov >= 2.8",
    "pytest-randomly >= 3.2",
    "pytest-xdist == 1.29",
]
dev = [
    "bump2version >= 1.0",
    "pre-commit >= 2.0",
]
